<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/transaction_view_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/transaction_view_amount_label"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_alignBaseline="@+id/transaction_view_amount"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/transaction_view_amount_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/transaction_view_amount"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:gravity="right"
                    android:inputType="numberDecimal" >

                    <requestFocus />
                </EditText>

            </RelativeLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/transaction_view_date_label"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_alignBaseline="@+id/transaction_view_date"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/transaction_view_date"
                    android:layout_weight="0.45"
                    android:text="@string/transaction_view_date_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/transaction_view_date"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_weight="0.45"
                    android:ems="10"
                    android:inputType="date" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/transaction_view_category_label"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_alignBaseline="@+id/transaction_view_category_spinner"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/transaction_view_category_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/transaction_view_category_spinner"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true" />

            </RelativeLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/transaction_view_transaction_type_label"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/transaction_view_transaction_type_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/transaction_view_transaction_type_spinner"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true" />

            </RelativeLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/transaction_view_reason_label"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/transaction_view_reason_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/transaction_view_reason_text"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:ems="10" />
            </RelativeLayout>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/transaction_view_cancel_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/transaction_view_ok_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/ok_botton" />
    </LinearLayout>

</LinearLayout>